--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
    <li>Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
    <li>Provide the Border Force with the resources to prevent illegal visa overstays.</li>
    <li>Reduce unnecessary visas for work that we can train Australians to do.</li>
+   <li>Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not excede departures to that same country by more than 10 000 (or some lower number).</li>
   </ul>
  <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
 </ul>
