--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
   <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other harmful advertising;</li>
   <li>Solve the underemployment crisis;</li>
   <li>Solve the police staffing crisis;</li>
-  <li>Support measures to protect animals from unnecessary harm and cruelty.</li>
+  <li>Support measures to protect animals from unnecessary harm and cruelty;</li>
   <li>Solve the corruption crisis;</li>
   <li>Forge a better way of doing politics and a more democratic political system;</li>
-  <li>Increase the accountability, efficiency and competence of our parliament and our policy-making;</li>
+  <li>Increase the accountability, efficiency and competence of our parliament and our policy-making.</li>
  </ul>
  
  <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above is achievable with an adequate plan and enough people supporting it.</p>
@@ -138,7 +138,7 @@
  <p>It's about how the candidate will use the platform of being a member of parliament to hold both state and federal governments accountable. It's about how willing the candidate is to advocate for better policy in a way that appeals to the whole political spectrum. But most of all, it's about the message that you will send to the houses of parliament and to Australia by voting for that candidate. Do you want to send the message that Australians are satisfied with our political parties and will vote for them no matter what, or do you want to send a message that Australians will support independents if political parties won't do better? The more support I get, and the more votes I get, the more encouraged deep policy thinkers will be to put themselves forward at the next federal and state elections, and the more accountable politicians and political parties will have to be to get elected.</p>
  <p>Fundamentally, voting for me is about sending a message.</p>
  
- <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policy suggestions and discussion</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy passion, the necessary deep thinking, and the necessary independence, to contribute substantially to solving our problems.</p>
+ <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates who demonstrate <em>through their own policy suggestions and discussion</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy passion, the necessary deep thinking, and the necessary independence, to contribute substantially to solving our problems.</p>
 
  <p>There are three crucial components to my plan:</p>
  <ol>
@@ -163,10 +163,10 @@
  <section id="whydetail" class="content-section responsive-width">
  <h2>Why so much policy detail?</h2>
  <p>This website contains over 7000 words of policy discussion including thousands of words of my own policy suggestions, and I don't expect most of you to read all of that. Nor do I think I should be deciding policy by myself.</p>
- <p>My policy suggestions are described in detail below</p>
+ <p>My policy suggestions are described in detail below:</p>
  <ul>
-  <li>for those who are interested in the details</li>
-  <li>to demonstrate my passion and my capabilities when it comes to thinking independently about policy and politics</li>
+  <li>for those who are interested in the details;</li>
+  <li>to demonstrate my passion and my capabilities when it comes to thinking independently about policy and politics;</li>
   <li>to ensure accountability;</li>
   <li>to assist policy discussion with those who are interested;</li>
   <li>to support further policy development.</li>
