--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   <li>the right internal leaders;</li>
   <li>and the right amount of funding;</li>
  </ul>
- <p>If politicians just did this one job well enough, government departments would be collaboratiing with others, including non-departmental experts and the general public, to do all of the other necessary policy making with integrity, with politicians providing the oversight to ensure that their work is alligned with democratic prefences and the best available evidence. Currently this isn't happening. In order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability through their policy writing and their policy communication.</p>
+ <p>If politicians just did this one job well enough, government departments would be collaborating with others, including non-departmental experts and the general public, to do all of the other necessary policy making with integrity, with politicians providing the oversight to ensure that their work is aligned with democratic preferences and the best available evidence. Currently this isn't happening. In order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability through their policy writing and their policy communication.</p>
 
  <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
  <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are capable of thinking independently about policy for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
@@ -516,7 +516,7 @@
    <li>Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
    <li>Provide the Border Force with the resources to prevent illegal visa overstays.</li>
    <li>Reduce unnecessary visas for work that we can train Australians to do.</li>
-   <li>Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not excede departures to that same country by more than 10&#8239;000 (or some lower number).</li>
+   <li>Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not exceed departures to that same country by more than 10&#8239;000 (or some lower number).</li>
   </ul>
  <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
 </ul>
