--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <li>the right limitations on their powers;</li>
   <li>the right oversight;</li>
   <li>the right internal leaders;</li>
-  <li>and the right amount of funding;</li>
+  <li>and the right amount of funding.</li>
  </ul>
  <p>If politicians just did this one job well enough, government departments would be collaborating with others, including non-departmental experts and the general public, to do all of the other necessary policy making with integrity, with politicians providing the oversight to ensure that their work is aligned with democratic preferences and the best available evidence. Currently this isn't happening. In order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability through their policy writing and their policy communication.</p>
 
