--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
  <small>(12.0_Police_Support)</small>
 </h4>
 
- <p>In addition to employer more police officiers, provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures.</p>
+ <p>In addition to employing more police officiers, provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures.</p>
 
 <h3>Pollution, traffic congestion and the algae crisis
 </h3>
