--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
  </ul>
 
  <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
+
+ <iframe width="381" height="677" src="https://www.youtube.com/embed/SZbqgZ-uG1Q" title="Happy New Year to everyone especially Waite, Mitcham and Adelaide." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+</section> <!-- /whydetail -->
      
 <section id="policy" class="content-section responsive-width">
 
