--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <div id="policy-contents" class="policy-toc">
  <ol class="toc-list">
   <h3><a href="#Why_Federal_Policies">Why I have federal policies too</a></h3>
-  <h3><a href="#1.0_COL">Cost of living</a></h3>
+  <h3><a href="#COL">Cost of living</a></h3>
   <li>
   <ul class="sub-toc-list">
    <li>
