--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   </ul>
   </li>
   <li>
-   <a href="#2.0_Reserve_Bank_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour</a>
+   <a href="#2.0_RBA_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour</a>
   </li>
   <h3><a href="#3_Housing">Housing</a></h3>
   <li>
@@ -395,7 +395,7 @@
    Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income);
   </li>
   <li>
-   <a href="#2.0_Reserve_Bank_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour;</a>
+   <a href="#2.0_RBA_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour;</a>
   </li>
   <li>
    Increase wages faster and reduce unemployment by having the Fair Work Commission:
@@ -424,7 +424,7 @@
 
 <p>Reduce prices on essentials like electricity, and healthy, environmentally-friendly protein sources for South Australians through investment or through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the government will negotiate and regulate to reduce the price of some essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. Prices will be regulated to be even lower or free at times when there is a surplus of electricity on the grid.</p>
 
-<h4 id="2.0_Reserve_Bank_Reform">Reserve Bank Reform
+<h4 id="2.0_RBA_Reform">Reserve Bank Reform
  <small>(2.0_RBA_Reform)</small>
 </h4>
 
