--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, there are a number of things that can be done at the state level:</p>
 
 <ul>
- <li>11.1 Solve the police staffing crisis with police support officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.
+ <li>11.1 Solve the police staffing crisis with police support officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.</li>
  <li>11.2 Prevent businesses from employing illegal workers.</li>
  <li>11.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAES explained in Policy 10.0 above.</li>
  <li>11.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
