--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <li>
    <a href="#11.0_Reduce_Immigration">Reduce immigration</a>
    <ul class="sub-toc-list">
-    <li><a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration by enforcing existing visa laws, providing adequate training and experience for Australians, and reducing skilled migrant visas</a> (11.0)</li>
+    <li><a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration by improving enforcement of existing visa laws, providing adequate training and experience for Australians, and reducing skilled migrant visas</a> (11.0)</li>
    </ul>
   </li>
   <h3><a href="#12.0_Police_Support">Policing</a></h3>
@@ -406,7 +406,7 @@
    </ul>
   </li>
   <li>
-   <a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration by enforcing existing visa laws, providing adequate training and experience for Australians, and reducing skilled migrant visas.</a> (11.0)
+   <a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration by improving enforcement of existing visa laws, providing adequate training and experience for Australians, and reducing skilled migrant visas.</a> (11.0)
   </li>
  </ul>
 
