--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
   <li>
   <ul class="sub-toc-list">
    <li>
-    <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest or low-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices</a>
+    <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest or low-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices</a> (1.1)
    </li>
    <li>
-    <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, regulation and compensation</a>
+    <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, regulation and compensation</a> (1.2)
    </li>
    <li>
-    <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</a>
+    <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</a> (1.3)
    </li>
    <li>
     <a href="#1.4_Wages">
@@ -233,7 +233,7 @@
      <li>Introduce penalty rates for those working over 30 hours a week;</li>
      <li>Increase penalty rates for those working night shifts or having to commute at rush hour;</li>
     </ul>
-    </a>
+    </a> (1.4)
    </li>
   </ul>
   </li>
