--- a/index.html
+++ b/index.html
@@ -386,16 +386,16 @@
 <p>My initial federal policies are to:</p>
 <ul>
   <li>
-   <a href="#7.0_Federal_Underfunding">Provide better funding to struggling states. Call out the federal government for underfunding South Australia;</a>
+   <a href="#7.0_Federal_Underfunding">Provide better funding to struggling states. Call out the federal government for underfunding South Australia;</a> (7.0)
   </li>
   <li>
-   <a href="#8.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free;</a>
+   <a href="#8.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free;</a> (8.0)
   </li>
   <li>
    Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income);
   </li>
   <li>
-   <a href="#2.0_RBA_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour;</a>
+   <a href="#2.0_RBA_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour;</a> (2.0)
   </li>
   <li>
    Increase wages faster and reduce unemployment by having the Fair Work Commission:
