--- a/index.html
+++ b/index.html
@@ -424,9 +424,16 @@
 
 <p>Reduce prices on essentials like electricity, and healthy, environmentally-friendly protein sources for South Australians through investment or through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the government will negotiate and regulate to reduce the price of some essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. Prices will be regulated to be even lower or free at times when there is a surplus of electricity on the grid.</p>
 
-<h4 id="1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</h4>
+<h4 id="1.3_Taxes">Tax reform<br>
+<small>(1.3_Taxes)</small>
+</h4>
 
-<h4 id="1.4_Wages">Increase wages faster and reduce unemployment</h4>
+<p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).<br>
+</p>
+
+<h4 id="1.4_Wages">Increase wages faster and reduce unemployment<br>
+<small>(1.4_Wages)</small>
+</h4>
 
 <p>
 Increase wages faster and reduce unemployment by requiring the Fair Work Commission to:
