--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 <h3 id="Federal_Policies">Federal policies</h3>
 
 <p>My initial federal policies are to:</p>
-<ul>
+<ul class="sub-toc-list">
   <li>
    <a href="#7.0_Federal_Underfunding">Provide better funding to struggling states. Call out the federal government for underfunding South Australia;</a> (7.0)
   </li>
