--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
    <a href="#8.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free;</a> (8.0)
   </li>
   <li>
-   <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income);</a>
+   <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income);</a> (1.3)
   </li>
   <li>
    <a href="#2.0_RBA_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour;</a> (2.0)
@@ -405,7 +405,7 @@
     <li>Introduce penalty rates for those working over 30 hours a week;</li>
     <li>Increase penalty rates for those working night shifts or having to commute at rush hour.</li>
    </ul>
-   </a>
+   </a> (1.4)
   </li>
   <li>
    <a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration by improving enforcement of existing visa laws, providing adequate training and experience for Australians, and reducing skilled migrant visas.</a> (11.0)
