--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
   </li>
   <h3><a href="#12.0_Police_Support">Policing</a></h3>
   <li>
-   <a href="#12.0_Police_Support">Solve the police staffing crisis with police support officers and better recruitment methods</a>
+   <a href="#12.0_Police_Support">Solve the police staffing crisis with new Police Support Officers and better recruitment methods</a>
   </li>
   <h3><a href="#13.0_Algae_Solution">Pollution</a></h3>
   <li>
@@ -545,7 +545,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <h3 id="howtopay">How will we pay for this?</h3>
 
-<p>Solving every major crisis we are facing will cost the government money. We need to fund cost of living measures and better housing policies, build and staff more hospitals and aged care facilities, hire more community nurses and doctors, create more emergency departments, hire more police officers and police support officers, provide loans to people for efficiency upgrades and electrification of their homes, invest in producing essentials cheaply, develop something similar to the Pharmaceutical Benefits Scheme for non-pharmaceutical essentials, and more, all detailed below.</p>
+<p>Solving every major crisis we are facing will cost the government money. We need to fund cost of living measures and better housing policies, build and staff more hospitals and aged care facilities, hire more community nurses and doctors, create more emergency departments, hire more police officers and new Police Support Officers, provide loans to people for efficiency upgrades and electrification of their homes, invest in producing essentials cheaply, develop something similar to the Pharmaceutical Benefits Scheme for non-pharmaceutical essentials, and more, all detailed below.</p>
 <p>Luckily we have big corporations with large profit margins that can afford to pay, along with hundreds, perhaps thousands, of decamillionaires. We also don't charge corporations and other countries enough for our finite natural resources such as minerals. South Australia has more money coming in from minerals (per capita) than Victoria, New South Wales, the ACT or Tasmania. These sources and other large export industries provide us with an ample base to generate revenue while reducing costs for ordinary South Australians.</p>
 <p>However, Western Australia exports far more of our finite natural resources than any other state, so ideally we also want the federal government to charge for these resources, and provide states with the funding we need to solve the crises we are facing. Unlike most other politicians, I have the independence necessary to use state parliament as a platform to call on the federal government for the funding we desperately need.</p>
 <p>In the meantime, we need to charge for our own export resources in order to fund the solutions to the crises locally. You can read more about this in the article "Paying for good policy" underneath the policy section.</p>
@@ -616,7 +616,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, there are a number of things that can be done at the state level:</p>
 
 <ul>
- <li>11.1 Solve the police staffing crisis with police support officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.</li>
+ <li>11.1 Solve the police staffing crisis with new Police Support Officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.</li>
  <li>11.2 Prevent businesses from employing illegal workers.</li>
  <li>11.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAES explained in Policy 10.0 above.</li>
  <li>11.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
@@ -641,7 +641,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <small>(12.0_Police_Support)</small>
 </h4>
 
- <p>In addition to employing more police officers, provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures.</p>
+ <p>In addition to supporting the government's policy to employ more police officers, provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures.</p>
 
 <h3>Pollution, traffic congestion and the algae crisis
 </h3>
