--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
  <small>(1.2_Cheap_Essentials)</small>
 </h4>
 
-<p>Reduce prices on essentials like electricity, and healthy, environmentally-friendly protein sources for South Australians through investment or through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the government will negotiate and regulate to reduce the price of some essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. Prices will be regulated to be even lower or free at times when there is a surplus of electricity on the grid.</p>
+<p>Reduce prices on essentials like electricity, and healthy, environmentally-friendly protein sources for South Australians through investment or through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the government will negotiate and regulate to reduce the price of some essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. Support and expand the government's policy to make electricity free at times when there is a surplus of electricity on the grid.</p>
 
 <h4 id="1.3_Taxes">Tax reform<br>
 <small>(1.3_Taxes)</small>
