--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
    <ul class="sub-toc-list">
    <a href="#3.0_Assist_Buyers">
     <li>
-     <a href="#3.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents to purchase at a regulated price</a> (3.0)
+     <a href="#3.0_Assist_Buyers">Provide zero-interest or low-interest loans to the current renter or a chosen prospective resident to purchase at a regulated price</a> (3.0)
     </li>
    </ul>
   </li>
@@ -284,6 +284,9 @@
     </li>
     <li>
      <a href="#6.2_More_EDs">Where feasible, reopen hospitals and emergency departments such as the Blackwood Hospital and the Repat emergency department</a> (6.2)
+    </li>
+    <li>
+     <a href="#6.2_More_EDs"> Allow more Australians to study medical degrees and clinical psychology, especially Masters programs, in South Australia.</a> (6.2.4)
     </li>
     <li>
      <a href="#6.2_More_EDs">Increase the number of rehab facilities</a> (6.3)
