--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
    <ul class="sub-toc-list">
    <a href="#3.0_Assist_Buyers">
     <li>
-     <a href="#3.0_Assist_Buyers">Provide zero-interest or low-interest loans to the current renter or a chosen prospective resident to purchase at a regulated price</a> (3.0)
+     <a href="#3.0_Assist_Buyers">Provide zero-interest or low-interest loans to the current long-term renter or a chosen prospective resident to purchase at a regulated price</a> (3.0)
     </li>
    </ul>
   </li>
