--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
    <ul class="sub-toc-list">
    <a href="#3.0_Assist_Buyers">
     <li>
-     <a href="#3.0_Assist_Buyers">Provide zero-interest or low-interest loans to the current long-term renter or a chosen prospective resident to purchase at a regulated price</a> (3.0)
+     <a href="#3.0_Assist_Buyers">Provide zero-interest or low-interest loans to the current long-term renter or a chosen prospective resident to cover the gap to a regulated price</a> (3.0)
     </li>
    </ul>
   </li>
@@ -474,7 +474,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>Regulating large-portfolio property and land investment, preventing hyperinflation and price gouging.</li>
 </ul>
 
-<h4 id="3.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents at a regulated price<br>
+<h4 id="3.0_Assist_Buyers">Provide zero-interest or low-interest loans to the current long-term renter or a chosen prospective resident to cover the gap to a regulated price<br>
  <small>(3.0_Assist_Buyers)</small>
 </h4>
 
