--- a/index.html
+++ b/index.html
@@ -310,9 +310,12 @@
   </li>
   <h3><a href="#11.0_Reduce_Immigration">Immigration, housing quality, unemployment and underemployment</a></h3>
   <li>
-   <a href="#11.0_Reduce_Immigration">Reduce immigration</a>
+   <a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration</a>
    <ul class="sub-toc-list">
-    <li><a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration by improving enforcement of existing visa laws, providing adequate training and experience for Australians, and reducing skilled migrant visas</a> (11.0)</li>
+    <li>
+     <a href="#11.0_Reduce_Immigration">Improve the enforcement of visa regulations</a> (11.1-11.6)
+    </li>
+    <li><a href="#11.0_Reduce_Immigration">Provide adequate training and experience for Australians and reduce skilled migrant visas</a> (11.3-11.6)
    </ul>
   </li>
   <h3><a href="#12.0_Police_Support">Policing</a></h3>
