--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <li>Secondly, due to Policy 4 below, property investors will be incentivised or required to sell to the rightful resident at such a designated price, rather than sell to someone else, and this price limit will be stricter for large-portfolio investments than for a primary residence, as explained below.</li>
  </ul>
 
-<h4>Regulate who large portfolio land and housing investors must offer their properties to and how much they can charge<br>
+<h4>Regulate who land and housing investors must offer their properties to and how much they can charge<br>
  <small>(4.0_Regulate_Investment)</small>
 </h4>             
 <!-- Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be rented or purchased by the person or family with the greatest moral right to the property at a fair price. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this. -->
@@ -497,7 +497,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 
 <p>We've also heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money, or rented out as an Airbnb.</p>
 
-<p>Most of us recognise both of these examples as an injustice. The fact that these injustices are allowed also incentivises large-portfolio housing and land investment, which contributes to the housing crisis. Furthermore, both examples indicate that legal property rights have become too disconnected from moral property rights, which causes other injustices and further contributes to the housing crisis.</p>
+<p>Most of us recognise both of these examples as an injustice. The fact that these injustices are allowed also incentivises an unfair housing market, which contributes to the housing crisis. Furthermore, both examples indicate that legal property rights have become too disconnected from moral property rights, which causes other injustices and further contributes to the housing crisis.</p>
 
 <p>To solve both of these issues we could:</p>
 
