--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <a href="#1.4_Wages">
     Increase wages faster and reduce unemployment by requiring the Fair Work Commission to:
     <ul>
-     <li>Take into account the real increase in cost of living and housing at constant quality, not just CPI;</li>
+     <li>Take into account the real increase in cost of living and housing at constant quality, not just CPI, to increase wages across the board;</li>
      <li>Introduce penalty rates for those working over 30 hours a week;</li>
      <li>Increase penalty rates for those working night shifts or having to commute at rush hour;</li>
     </ul>
@@ -407,7 +407,7 @@
    <a href="#1.4_Wages">
    Increase wages faster and reduce unemployment by having the Fair Work Commission:
    <ul>
-    <li>Take into account the real increase in cost of living and housing at constant quality, not just CPI;</li>
+    <li>Take into account the real increase in cost of living and housing at constant quality, not just CPI, to increase wages across the board;</li>
     <li>Introduce penalty rates for those working over 30 hours a week;</li>
     <li>Increase penalty rates for those working night shifts or having to commute at rush hour.</li>
    </ul>
@@ -446,7 +446,7 @@
 <p>
 Increase wages faster and reduce unemployment by requiring the Fair Work Commission to:
 <ul>
- <li>Take into account the real increase in cost of living and housing at constant quality, not just CPI;</li>
+ <li>Take into account the real increase in cost of living and housing at constant quality, not just CPI, to increase wages across the board;</li>
  <li>Introduce penalty rates for those working over 30 hours a week;</li>
  <li>Increase penalty rates for those working night shifts or having to commute at rush hour;</li>
 </ul>
@@ -535,7 +535,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <small>(6.2_More_EDs)</small>
 </h4>
 
-<p>Increase not only the size of emergency departments and hospitals, but also the number of them, the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
+<p>Expand the government's policy to increase the number of hospitals and emergency departments, the size of emergency departments, and increase the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
 
 <ul>
  <li>6.2.1 Where feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital.</li>
