--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@
    <a href="#6.0_Better_Care">Expand health care and aged care services</a>
    <ul class="sub-toc-list">
     <li>
-     <a href="#6.1_Aged_Care">Provide abundant, high-quality aged care and at-home care</a> (6.1)
+     <a href="#6.1_Aged_Care">Provide abundant, high-quality aged care and at-home care to quickly solve the ramping crisis</a> (6.1)
     </li>
     <li>
      <a href="#6.2_More_EDs">Increase the number of hospitals, emergency departments and staff</a> (6.2)
     </li>
     <li>
-     <a href="#6.2_More_EDs">Where feasible, reopen hospitals and emergency departments such as the Blackwood Hospital and the Repat emergency department</a> (6.2)
+     <a href="#6.2_More_EDs">If feasible, reopen hospitals and emergency departments such as the Blackwood Hospital and the Repat emergency department</a> (6.2)
     </li>
     <li>
      <a href="#6.2_More_EDs"> Allow more Australians to study medical degrees and clinical psychology, especially Masters programs, in South Australia.</a> (6.2.4)
@@ -360,7 +360,7 @@
     <li><a href="#19.2_Domestic_Violence">Support other services for victims of domestic violence and neglect, including child protection services</a> (19.2)</li>
     <li><a href="#19.3_Environmental_Health">Address the environmental causes of mental illness and violence</a> (19.3)</li>
     <li><a href="#19.4_Regulate_Advertising">Prevent harm from advertising and provide better info</a> (19.4)</li>
-    <li><a href="#19.5_Free_Sport">Provide free sport and healthy activity classes</a> (19.5)</li>
+    <li><a href="#19.5_Free_Sport">Provide a yearly free class in a sport or other healthy activity</a> (19.5)</li>
     <li><a href="#19.6_Healthier_Drinks">Ensure more diet soft drink options than regular soft drinks</a> (19.6)</li>
    </ul>
   </li>
@@ -521,7 +521,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <small>(6.0_Better_Care)</small>
 </h3>
 
-<h4 id="6.1_Aged_Care">Provide abundant, high-quality aged care and at-home urgent care<br>
+<h4 id="6.1_Aged_Care">Provide abundant, high-quality aged care and at-home care to quickly solve the ramping crisis<br>
  
 </h4>
 
@@ -538,8 +538,8 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
 <p>Expand the government's policy to increase the number of hospitals and emergency departments, the size of emergency departments, and increase the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
 
 <ul>
- <li>6.2.1 Where feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital.</li>
- <li>6.2.2 Where feasible, reopen emergency departments that have been closed, like the emergency department at the Repat.</li>
+ <li>6.2.1 If feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital.</li>
+ <li>6.2.2 If feasible, reopen emergency departments that have been closed, like the emergency department at the Repat.</li>
  <li>6.2.3 Build new hospitals, and design them to efficiently provide the most desperately needed services.</li>
  <li>6.2.4 Allow more Australians to study medical degrees and clinical psychology, especially Masters programs, in South Australia.</li>
  <li>6.2.5 Allow psychologists to assist psychiatrists in mental hospitals.</li>
