--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>6.2.1 If feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital.</li>
  <li>6.2.2 If feasible, reopen emergency departments that have been closed, like the emergency department at the Repat.</li>
  <li>6.2.3 Build new hospitals, and design them to efficiently provide the most desperately needed services.</li>
- <li>6.2.4 Allow more Australians to study medical degrees and clinical psychology, especially Masters programs, in South Australia.</li>
+ <li>6.2.4 Allow more Australians to study medical degrees and clinical psychology in South Australia.</li>
  <li>6.2.5 Allow psychologists to assist psychiatrists in mental hospitals.</li>
  <li>6.2.6 Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals.</li>
  <li>6.2.7 Investigate the viability of specialist graduate medical programs at our universities, so that qualified health professionals can become specialist doctors by learning only what is relevant to a chosen specialty.</li>
