--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
  </div>
 </section>
 
+<iframe width="982" height="586" src="https://www.youtube.com/embed/kC8SzDs7b-U?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT" title="My plan as an Independent for Waite 2026 (Episode 1)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <section id="plan" class="content-section responsive-width">
  <h2>My plan</h2>
  <p>Hi. I'm Alec Gargett, and I have a plan to:</p>
