--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
  </div>
 </section>
 
+<section id="podcast" class="content-section responsive-width">
+
+<p>You can listen to (or watch) a podcast version of this website on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>, <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a> or <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>.<!--  or <a href="">Apple Podcasts</a>. -->
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/0OgcLqFbmoG5ZxTQNLFg3c/video?utm_source=generator" width="381" height="677" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+</section> <!--/podcast-->
+
 <section id="plan" class="content-section responsive-width">
  <h2>My plan</h2>
  <p>Hi. I'm Alec Gargett, and I have a plan to:</p>
