--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <section id="podcast" class="content-section responsive-width">
 
-<p>You can listen to (or watch) a podcast version of this website on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>, <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a> or right here:<!--  or <a href="">Apple Podcasts</a>. -->
+<p>You can listen to (or watch) a podcast version of this website on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>, <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or right here:
 
 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/0OgcLqFbmoG5ZxTQNLFg3c/video?utm_source=generator" width="381" height="677" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
@@ -367,7 +367,7 @@
     <li><a href="#19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless and for victims of domestic violence</a> (19.1)</li>
     <li><a href="#19.2_Domestic_Violence">Support other services for victims of domestic violence and neglect, including child protection services</a> (19.2)</li>
     <li><a href="#19.3_Environmental_Health">Address the environmental causes of mental illness and violence</a> (19.3)</li>
-    <li><a href="#19.4_Regulate_Advertising">Prevent harm from advertising and provide better info</a> (19.4)</li>
+    <li><a href="#19.4_Regulate_Advertising">Prevent harm from advertising and provide better labelling</a> (19.4)</li>
     <li><a href="#19.5_Free_Sport">Provide a yearly free class in a sport or other healthy activity</a> (19.5)</li>
     <li><a href="#19.6_Healthier_Drinks">Ensure more diet soft drink options than regular soft drinks</a> (19.6)</li>
    </ul>
