--- a/index.html
+++ b/index.html
@@ -464,6 +464,8 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <small>(2.0_RBA_Reform)</small>
 </h4>
 
+<iframe width="366" height="651" src="https://www.youtube.com/embed/gpPraaCSR3M" title="This central bank reform is underrated for mitigating inflation and the cost of living crisis." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <p>Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour</p>
 
 <p>Require the Reserve Bank to develop a new cost of living index, in addition to the CPI. The new cost of living index would be designed to accurately measure changes in the overall cost of living including interest payments and applying the constant quality principle to housing (such as location and total size of the property), neither of which are involved in the CPI.</p>
