--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <li>
   <ul class="sub-toc-list">
    <li>
-    <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest or low-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices</a> (1.1)
+    <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices</a> (1.1)
    </li>
    <li>
     <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, regulation and compensation</a> (1.2)
@@ -428,11 +428,11 @@
 
 <h3 id="COL">Cost of Living</h3>
 
-<h4 id="1.1_Efficiency_Loans">Reduce bills by providing zero-interest or low-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices<br>
+<h4 id="1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices<br>
  <small>(1.1_Efficiency_Loans)</small>
 </h4>
 
-<p>Provide zero-interest or low-interest loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, buying a vehicle-to-home inverter, or repainting a dark roof to a heat-reflecting white. This will be designed to reduce prices by providing only enough to make the difference up to a target price.</p>
+<p>Provide zero-interest loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, buying a vehicle-to-home inverter, or repainting a dark roof to a heat-reflecting white. This will be designed to reduce prices by providing only enough to make the difference up to a target price.</p>
 
 <h4 id="1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods<br>
  <small>(1.2_Cheap_Essentials)</small>
