--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 
 <p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
+<p>Here is a (very) quick summary of most my policies:</p>
+
+<iframe width="366" height="651" src="https://www.youtube.com/embed/38VHuKiLySk" title="Quick summary of my policies as an independent for Waite (Mitcham Area), Adelaide, South Australia." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <p>The following contents list also serves as a summary of my policies for those who aren't interested in every detail.</p>
 
 <div id="policy-contents" class="policy-toc">
